--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -78,3 +78,69 @@ ul li a {
     transition: all 0.5s;
 }
   
+main {
+  padding: 0px 50px;
+}
+
+#hero {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero .icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding-bottom: 50px;
+}
+
+.hero .icons span {
+  color: #f2f2f2;
+  font-size: 2rem;
+}
+
+.hero .icons img {
+  height: 70px;
+}
+
+.hero h1 {
+  font-size: 2.8rem;
+  color: #f2f2f2;
+  line-height: 40px;
+  word-spacing: 0.2rem;
+}
+
+.hero p {
+  font-size: 1.125rem;
+  color: #f2f2f2;
+  line-height: 60px;
+  word-spacing: 0.2rem;
+}
+
+.hero button {
+  font-size: 1rem;
+  color: #f2f2f2;
+  font-weight: 600;
+  border-radius: 30px;
+  background-color: #44444442;
+  border: 1px solid #44444442;
+  word-spacing: 0.2rem;
+  padding: 10px 32px;
+  cursor: pointer;
+  transition: all .5s;
+}
+
+.hero button:hover {
+  background-color: transparent;
+}
