--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -285,11 +285,11 @@ main {
 }
 
 .services .card-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  column-gap: 2rem;
+  display: flex;
+  column-gap: 5rem;
   row-gap: 2rem;
   margin-top: 40px;
+  width: 100%;
 }
 
 .services .card-container .card {
@@ -305,6 +305,7 @@ main {
   height: 300px;
   transition: all 0.9s;
   cursor: pointer;
+  width: 340px;
 }
 
 .services .card-container .card:hover {
