--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -331,6 +331,199 @@ main {
   height: 50px;
 }
 
+
+#comments {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  
+  padding-top: 100px !important;
+  padding-bottom: 150px;
+}
+
+.comments {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  column-gap: 2rem;
+  row-gap: 2rem;
+  padding-top: 20px;
+}
+
+
+#comments h2 {
+  font-size: 2.3rem;
+  color: #f2f2f2;
+  margin-bottom: 30px;
+  word-spacing: 0.2rem;
+}
+
+.comment {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+  border-radius: 10px;
+  height: 200px;
+  transition: all 0.9s;
+}
+
+.comment div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1rem;
+}
+
+.comment img {
+  height: 45px;
+  border-radius: 100%;
+}
+
+.comment p {
+  font-size: 14.3px;
+  font-weight: 600;
+  line-height: 25px;
+  text-align: left;
+  color: #97979e;
+  margin-bottom: 20px;
+  font-style: italic;
+}
+
+.comment span {
+  font-size: 13px;
+  font-weight: 600;
+  line-height: 25px;
+  text-align: left;
+  color: #DFDFD6;
+  cursor: pointer;
+}
+
+
+#contact {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact h2 {
+  
+  font-size: 2.3rem;
+  color: #f2f2f2;
+  margin-bottom: 30px;
+  word-spacing: 0.2rem;
+}
+
+.contact p {
+  font-size: 1rem;
+  color: #f2f2f2;
+  line-height: 22px;
+  word-spacing: 0.2rem;
+  margin-bottom: 10px;
+  font-weight: 500;
+}
+
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  gap: 0.5rem;
+  padding-top: 20px;
+}
+
+form input {
+  height: 55px;
+  padding: 0 10px;
+  border-radius: 6px;
+  border: 1px solid #44444442;
+  background-color: transparent;
+  outline: none;
+  color: #f2f2f2;
+  font-size: 0.90rem;
+  font-weight: 600;
+}
+
+form textarea {
+  padding: 10px 10px;
+  border-radius: 6px;
+  border: 1px solid #44444442;
+  background-color: transparent;
+  outline: none;
+  height: 80px;
+  color: #f2f2f2;
+  font-size: 0.90rem;
+  font-weight: 600;
+}
+
+form button {
+  height: 40px;
+  border-radius: 6px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 0.88rem;
+  font-weight: 600;
+  background-color: #2CC887;
+}
+
+#contact .blur {
+  display: flex;
+  justify-content: center;
+  background-color: #2CC887;
+  filter: blur(50px);
+  border-radius: 100%;
+  transform: rotate(-20deg);
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  left: 70%;
+  z-index: 9;
+  top: 430%;
+  animation: floating 5s infinite ease-in-out;
+}
+
+#contact .blur2 {
+  display: flex;
+  justify-content: center;
+  background-color: #2CC887;
+  filter: blur(40px);
+  border-radius: 100%;
+  transform: rotate(-20deg);
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  left: 80%;
+  z-index: 9;
+  top: 450%;
+  animation: floating 5s infinite ease-in-out;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid #44444442;
+  padding: 30px 0;
+}
+
+.footer {
+  padding: 0 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  color: #f2f2f2;
+  font-weight: 300;
+  font-size: 0.88rem;
+}
+
+
 @keyframes floating {
   0% {
     transform: translate(0, 0);
