--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -65,8 +65,10 @@ header {
   border-bottom: 1px solid #44444442;
 }
 
-.logo h3 {
-  color: #f2f2f2;
+.logo img {
+  height: 55px;
+  margin10px
+  object-fit: cover;
 }
 
 nav ul {
@@ -87,7 +89,7 @@ ul li a:hover {
 }
   
 main {
-  padding: 0px 50px;
+  
 }
 
 #hero {
@@ -218,6 +220,7 @@ main {
   width: 100%;
   display: flex;
   align-items: center;
+  padding: 0px 50px;
 }
 
 .about {
@@ -260,6 +263,7 @@ main {
   width: 100%;
   display: flex;
   align-items: center;
+  padding: 0px 50px;
 }
 
 .services {
@@ -336,7 +340,7 @@ main {
   width: 100%;
   display: flex;
   flex-direction: column;
-  
+  padding: 0px 50px;
   padding-top: 100px !important;
   padding-bottom: 150px;
 }
@@ -347,6 +351,7 @@ main {
   column-gap: 2rem;
   row-gap: 2rem;
   padding-top: 20px;
+  z-index: 11111111;
 }
 
 
@@ -355,6 +360,7 @@ main {
   color: #f2f2f2;
   margin-bottom: 30px;
   word-spacing: 0.2rem;
+  z-index: 1111111111;
 }
 
 .comment {
@@ -405,6 +411,7 @@ main {
   width: 100%;
   display: flex;
   align-items: center;
+  padding: 0px 50px;
 }
 
 .contact {
@@ -534,4 +541,69 @@ footer {
   100% {
     transform: translate(0, 0);
   }
+}
+
+#hero2 {
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  background: url("/assets/images/bg1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+#hero2::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  mix-blend-mode: multiply;
+}
+
+@keyframes slideshow {
+  0% { background-image: url("/assets/images/bg1.jpg"); }
+  25% { background-image: url("/assets/images/bg2.jpg"); }
+  50% { background-image: url("/assets/images/bg3.jpg"); }
+}
+
+#hero2 {
+  animation: slideshow 10s infinite;
+}
+
+
+.hero2 h1 {
+  font-size: 2.8rem;
+  color: #f2f2f2;
+  line-height: 40px;
+  word-spacing: 0.2rem;
+}
+
+.hero2 p {
+  font-size: 1.125rem;
+  color: #f2f2f2;
+  line-height: 60px;
+  word-spacing: 0.2rem;
+}
+
+.hero2 button {
+  font-size: 1rem;
+  color: #f2f2f2;
+  font-weight: 600;
+  border-radius: 30px;
+  background-color: #44444442;
+  border: 1px solid #44444442;
+  word-spacing: 0.2rem;
+  padding: 10px 32px;
+  cursor: pointer;
+  transition: all .5s;
+}
+
+.hero2 button:hover {
+  background-color: transparent;
 }
