--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -575,6 +575,13 @@ footer {
   animation: slideshow 15s infinite;
 }
 
+.hero2 {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 
 .hero2 h1 {
   font-size: 2.8rem;
